@@ -5,6 +5,7 @@ HelpMePlay | 1.0.10
 		- Added native support for every locale. Brazil, Mexico, France, Germany, Italy, Portugues, Russia, Korea, Taiwan, and China players rejoice!
 		- Titanic Research (Horrific Visions) is now a supported talent NPC! If you don't know what to pick, let HelpMePlay tell you.
 		- Added (even more) dialogs from Zereth Mortis. Are you ready for Patch 9.2? HelpMePlay sure is!
+		- Added a reminder to return to Orgrimmar or Stormwind at level 20. We all forget about the War Mode bonus here and there. It's no big deal, right? ._.
 	Fixes and Updates:
 		- Fixed dialogs that previously worked on Exile's Reach and in Draenor. They didn't want to work because I broke them. My bad...
 		- Fixed an issue with the Drafting Table in Gorgrond. Now you don't have to pick the Sparring Arena on your own.
